--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MUSIXMATCHAPIBASEURL = https://api.musixmatch.com/ws/1.1/
-MUMATCH_API_KEY = 0561712ca7f285270aaea338adf8feab
-LASTFM_API_KEY = 27877d2163ecd393fd5fa02bca0e0383
-SHARED_SECRET = 031c1064d4eb42595d14b85c1bd37d2c
+MUMATCH_API_KEY =
+LASTFM_API_KEY = 
+SHARED_SECRET =
